# AnimVideo

./: .gitignore  AGENTS.md  harness.sh  main.py  main2.py  pyproject.toml
animvideo/: config.py  image.py  video.py
animvideo/image/: __init__.py  _config.py  _img.py  _opencv.py  _panda3d.py  _pillow.py  _pygame.py
animvideo/scene/: __init__.py  _panda3d.py  _scene.py
tests/: thumbs.sh
