[project]
name = "animvideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "panda3d>=1.10.15",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
]
